[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"]}
riscv = {version = "0.13.0"}
sbi-rt = { version = "0.0.2", features = ["legacy"] }
