[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.9.0", features = ["core"] }
buddy_system_allocator = "0.11.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"]}
riscv = {version = "0.13.0"}
sbi-rt = { version = "0.0.2", features = ["legacy"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
xmas-elf = "0.10.0"
easy-fs = { path = "../easy-fs" }